@@ -1,3 +1,8 @@
+Fri Apr 15 12:14:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * bin/PerlACE/ProcessVX_Win32.pm:
+          Simplification and improvements.
+
 Fri Apr 15 11:59:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * bin/tao_orb_tests.lst:
